# herd

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
cubejs-api/: .dockerignore  .env  .gitignore  README.md  package-lock.json  package.json
dashboard/: docker-compose.yml  package.json
dashboard-app/: .env.production  README.md  package-lock.json  package.json
dashboard-app/src/: App.js
dashboard/dashboard-app/: package-lock.json  package.json
dashboard/schema/: CovidAuData.js  CovidAuDeathData.js  CovidAuVaccinationData.js  CovidNswCasesByLocation.js  (+2 more)
data-ingestion/: README.md  pyproject.toml  vax_excel_links.txt
data-ingestion/configs/: postgres_config.yml
data-ingestion/data/: covid_au_vaccination_data.csv  covid_vaccination_by_lga.csv
data-ingestion/ingestion/: __init__.py  configuration.py
data-ingestion/sources/: covid19data.py  vaccinations.py
ingestion/: README.md  main.py  pyproject.toml  requirements.txt  sink.py  update_and_commit.sh  vax_excel_links.txt
ingestion/configs/: csv_config.yml  postgres_config.yml
ingestion/data/: covid_au_data.csv  covid_au_death_data.csv  covid_au_vaccination_data.csv  covid_nsw_cases_by_location.csv  covid_vaccination_by_lga.csv  states.csv
ingestion/ingestion/: __init__.py  configuration.py  ingest.py  sink.py  source.py
ingestion/sources/: covid19data.py  nsw_government.py  utils.py  vaccinations.py
schema/: CovidAuData.js  CovidAuDeathData.js  CovidAuVaccinationData.js  CovidNswCasesByLocation.js  CovidNswTestsByLocation.js  CovidVaccinationByLga.js
(+13 files in other folders)
